# VNEP-2018

./: .gitignore  README.md
ant_colony/: .RData  .Rhistory  Makefile  filter.sh  graph.dot  greedy.data  greedyparams.ini  nomaxminparams.ini  output40  param.data  params.ini  random.data  test.sh  testparam.sh  tparam.ini
ant_colony/src/: PriorityQueue.h  heap.h  main.cpp  util.cpp  util.h  vmap.cpp  vmap.h
ant_colony/tex/: .RData  .Rhistory  Makefile  design.bib  design.dvi  design.tex  g1.dot  g2.dot  g3.dot  g4.dot  g5.dot  gfinal.dot  gpath.dot  gpathraw.dot  heur.tex  hpres.tex  param.data  plot.p  presdesign.tex  testall.data
data/ampl/: lar.data  med.data  p1.data  small.data
data/ampl2/: m10_1.data  m10_2.data  m10_3.data  m11_1.data  m11_2.data  m11_3.data  m12_1.data  m12_2.data  m12_3.data  (+261 more)
model/: d.data  d2.data  embed.mod  run.ampl  solve.ampl  solve.sh  test.sh
presentation/: Makefile  pres.tex
results/: README.md
test/: batchtest.sh  filter.sh  format1.sh  format2.sh  format3.sh  format4.sh  formatraw.sh  genparamfile.sh  gtt2dot  gttnvertices.sh  perc.sh  runbatchtest.sh  runtests.sh  sum_bandwidth.sh  test.sh  validate.sh
thesis/: abntex2-alf.bst  appendix.tex  bp.tex  cg.tex  conclusion.tex  instances.tex  introduction.tex  models.tex  problem.tex  relwork.tex  results.tex  thesis.tex
vne/: .gitignore  BUILD.md  CMakeLists.txt  FIXES.md  build_with_cplex.sh  params.ini
vne/cmake/: Findcplex.cmake
vne/format/: latex_time.sh  sort.sh  time.sh
vne/include/: ac.h  backtrack.h  bb.h  bbcgu.h  bprice.h  cg.h  cplex.h  fix.h  util.h  vnedefs.h
vne/src/: ac.cpp  backtrack.cpp  bb.cpp  bbcgu.cpp  bprice.cpp  bprice_rec.cpp  cg.cpp  cgunsplittable.cpp  cplex.cpp  fix.cpp  main.cpp  util.cpp  vnedefs.cpp
vne/test/: correctness.py  run.py  run_list.py  temp_run.py  time.py  vallib.py
(+19195 files in other folders)
